# surePython

./: .gitignore  AGENTS.md  MANIFEST.in  README.md  SUREPYTHON_1_0_RC1_COMPATIBILITY_MATRIX.md  SUREPYTHON_1_0_RC1_REAL_PROJECT_TESTS.md  SUREPYTHON_1_0_RC1_RELEASE_READINESS.md  SUREPYTHON_1_0_RC1_SCOPE.md  SUREPYTHON_1_0_RC1_SECURITY_REVIEW.md  SUREPYTHON_GITHUB_PUBLICATION_REPORT.md  SUREPYTHON_PHASE_1_1_DEPENDENCY_HARDENING_REPORT.md  SUREPYTHON_PHASE_1_2_CLASS_METHOD_REPORT.md  SUREPYTHON_PHASE_1_3_SCAN_FORMATS_REPORT.md  SUREPYTHON_PHASE_1_4_DRY_RUN_REPORT.md  SUREPYTHON_PHASE_1_5_TEST_INTEGRATION_REPORT.md  SUREPYTHON_PHASE_1_6_AUTO_LOG_REPORT.md  SUREPYTHON_PHASE_1_6_CONSOLIDATION_REPORT.md  SUREPYTHON_PHASE_1_7_ROLLBACK_REPORT.md  SUREPYTHON_PHASE_1_7_WINDOWS_NEWLINE_ROLLBACK_FIX_REPORT.md  SUREPYTHON_PHASE_1_8_DOCUMENTATION_AUDIT.md  SUREPYTHON_PHASE_1_8_DOCUMENTATION_PRODUCT_REPORT.md  SUREPYTHON_PHASE_1_8_PRE_RELEASE_VALIDATION_REPORT.md  SUREPYTHON_PHASE_1_REPORT.md  SUREPYTHON_PHASE_1_SPEC.md  SUREPYTHON_PHASE_2_0_ARCHITECTURE_AUDIT.md  SUREPYTHON_PHASE_2_0_IMPLEMENTATION_REPORT.md  SUREPYTHON_PHASE_2_0_PRE_MERGE_REVIEW.md  SUREPYTHON_PHASE_2_10_ARCHITECTURE_AUDIT.md  SUREPYTHON_PHASE_2_10_CODEX_COMPARISON_REPORT.md  SUREPYTHON_PHASE_2_10_IMPLEMENTATION_REPORT.md  SUREPYTHON_PHASE_2_10_PRE_MERGE_REVIEW.md  SUREPYTHON_PHASE_2_10_SELF_HOSTING_LOG.md  SUREPYTHON_PHASE_2_1_AGENT_PROTOCOL_ARCHITECTURE_AUDIT.md  SUREPYTHON_PHASE_2_1_IMPLEMENTATION_REPORT.md  SUREPYTHON_PHASE_2_1_PRE_MERGE_REVIEW.md  SUREPYTHON_PHASE_2_2_ARCHITECTURE_AUDIT.md  (+70 more)
docs/: BUILDING.md  (+17 more)
(+61 files in other folders)
