[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "surepython"
version = "0.1.0"
description = "SurePython v0.1 - controlled Python micro-modifications"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "libcst>=1.8",
  "pytest>=9.0",
]

[project.scripts]
surepython = "surepython.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
