[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "surepython"
version = "0.17.0"
description = "SurePython v0.1 - controlled Python micro-modifications"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "libcst>=1.8",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=9.0",
  "setuptools>=68",
  "wheel",
  "twine>=6.0",
  "tomli>=2; python_version < '3.11'",
]

[project.scripts]
surepython = "surepython.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["surepython*"]

[tool.setuptools.package-data]
surepython = ["contracts/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
